fix(InputField): prevent clear button overlapping inserted number

--- a/src/components/generic/InputField/InputField.scss
+++ b/src/components/generic/InputField/InputField.scss
@@ -10,7 +10,6 @@ $C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-input-field;
   }
 
   .#{$C}__input {
-    all: unset;
     font-size: 1rem;
     line-height: 1.5rem;
     background: var(--wxc-input--normal--background);
@@ -22,7 +21,9 @@ $C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-input-field;
     width: 100%;
     box-sizing: border-box;
 
+
     &[type="number"] {
+      padding: 0.25rem 3.85rem 0.125rem 0.75rem;
       -moz-appearance: textfield;
 
       &::-webkit-inner-spin-button,
